<resources>
    <string name="app_name">Avta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_set_event_list">Scheduled Events</string>
    <string name="menu_movable_event_list">Custom Events</string>
    <string name="menu_week_view">Calendar</string>

    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_scheduled_event_name">Name</string>
    <string name="edit_schedule_event_description">Description</string>
    <string name="select_date_time">Set start and end time</string>
    <string name="title_activity_add_movable_event">AddMovableEventActivity</string>
    <string name="title_activity_add_moveable_event">AddMoveableEventActivity</string>
    <string name="select_duration">%02dH %02dM</string>
    <string name="menu_start_time">Start</string>
    <string name="menu_end_time">End</string>
    <string name="menu_due_date">Due Date</string>
    <string name="menu_approx_duration">Duration</string>
    <string name="enjoyment_selector_text">%d / %d</string>
    <string name="menu_enjoyment">Enjoyment</string>
    <string name="event_list_time_different_day">%s\\n%s</string>
    <string name="event_list_time_same_day">%s - %s %s</string>
    <string name="action_export">Export all events</string>
</resources>
