<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_set_event_list">

    <fragment
        android:id="@+id/nav_set_event_list"
        android:name="com.example.avta.ui.SetEventListFragment"
        android:label="@string/menu_set_event_list"
        tools:layout="@layout/fragment_set_event_list" />

    <fragment
        android:id="@+id/nav_movable_event_list"
        android:name="com.example.avta.ui.MovableEventListFragment"
        android:label="@string/menu_movable_event_list"
        tools:layout="@layout/fragment_movable_event_list" />

    <fragment
        android:id="@+id/nav_week_view"
        android:name="com.example.avta.ui.WeekViewFragment"
        android:label="@string/menu_week_view"
        tools:layout="@layout/fragment_week_view" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.avta.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.avta.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.avta.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.avta.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.avta.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>