<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_set_event_list"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/menu_set_event_list" />
        <item
            android:id="@+id/nav_movable_event_list"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_movable_event_list" />
        <item
            android:id="@+id/nav_week_view"
            android:icon="@drawable/ic_calendar_black_24dp"
            android:title="@string/menu_week_view" />
    </group>

</menu>
